--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,13 +8,10 @@ phases:
       - pip install -r requirements.txt -t lib
   build:
     commands:
-      - echo "Zipping deployment package..."
-      - cd lib
-      - zip -r9 ../deployment_package.zip .
-      - cd ..
-      - zip -g deployment_package.zip lambda_function.py
-  post_build:
-    commands:
-      - echo "Updating lambda Function..."
-      - aws lambda update-function-code --function-name miniproject --zip-file fileb://deployment_package.zip
-      - echo "DONE!!"
+      - export BUCKET=ungerw-codepipeline-ap-south
+      - aws cloudformation package --template-file template.yaml --s3-bucket $BUCKET --output-template-file outputtemplate.yaml
+artifacts:
+  type: zip
+  files:
+    - template.yaml
+    - outputtemplate.yaml  
